--- a/.env
+++ b/.env
@@ -2,19 +2,19 @@
 # Type Of CMDBUILD (MANUAL, EMPTY, DEMO)
 #CMDBUILD_DB_TYPE=MANUAL
 #CMDBUILD_DB_TYPE=EMPTY
-#CMDBUILD_DB_TYPE=DEMO
-CMDBUILD_DB_TYPE=
+CMDBUILD_DB_TYPE=DEMO
+#CMDBUILD_DB_TYPE=
 
 # Use dump database for first run (no database exists)
 # if CMDBUILD_DUMP is null then use CMDBUILD_TYPE (DEMO OR EMPTY)
 # Or use one of them for restore ready dump as POSTGRES_DB
-CMDBUILD_DUMP=demo.dump.xz
+#CMDBUILD_DUMP=demo.dump.xz
 #CMDBUILD_DUMP=empty.dump.xz
 #CMDBUILD_DUMP=openmaint_demo.dump.xz
 #CMDBUILD_DUMP=openmaint_empty.dump.xz
 #CMDBUILD_DUMP=openmaint_empty_gis.dump.xz
 #CMDBUILD_DUMP=ready2use.dump.xz
-#CMDBUILD_DUMP=ready2use_demo.dump.xz
+CMDBUILD_DUMP=ready2use_demo.dump.xz
 #CMDBUILD_DUMP=ready2use_empty.dump.xz
 
 POSTGRES_HOST=pgsql
@@ -62,14 +62,14 @@ CMDBF_SCHEMALOCATION=http://localhost:8080/cmdbuild/services/cmdb-schema
 #CONFIG_MODE=ALWAYS
 CONFIG_MODE=FIRSTRUN
 
-SHARK_ENABLED=true
+SHARK_ENABLED=false
 SHARK_URL=http://shark:8080/shark
 SHARK_ENABLED_ATTACHMENT=true
 SHARK_DISABLE_SYNCHRONIZATION=true
 SHARK_USER_NAME=admin
 SHARK_USER_PASWORD=enhydra
 
-DMS_ENABLED=true
+DMS_ENABLED=false
 DMS_URL=http://alfresco:8080/alfresco/api/-default-/public/cmis/versions/1.1/atom
 DMS_PATH=/User Homes
 DMS_USER_NAME=admin
@@ -91,7 +91,7 @@ GIS_INITIALZOOMLEVEL=3
 GIS_GEOSERVER_MAXZOOM=24
 GIS_GEOSERVER_MINZOOM=0
 
-BIM_ENABLED=true
+BIM_ENABLED=false
 BIM_URL=http://bim:8080
 BIM_USER_NAME=admin@cmdbuild.org
 BIM_USER_PASSWORD=admin
